--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">BatteryManager</string>
+    <string name="in_this_app_you_can">in this app you can</string>
 </resources>
